# backend/docs/swagger.json
@@ -210,7 +210,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/my_modules.NewUserRow"
+                            "$ref": "#/definitions/database.UsersModel"
                         }
                     }
                 ],
@@ -309,7 +309,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/my_modules.NewUserRow"
+                            "$ref": "#/definitions/database.UsersModel"
                         }
                     }
                 ],
@@ -441,7 +441,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/my_modules.ActiveSessionsRow"
+                            "$ref": "#/definitions/database.ActiveSessionsModel"
                         }
                     }
                 ],
@@ -516,18 +516,16 @@
         }
     },
     "definitions": {
-        "my_modules.ActiveSessionsRow": {
+        "database.ActiveSessionsModel": {
             "type": "object",
-            "required": [
-                "exp",
-                "token_id"
-            ],
             "properties": {
-                "createdAt": {},
-                "exp": {
-                    "type": "integer"
+                "_id": {
+                    "type": "string"
                 },
-                "id": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "exp": {
                     "type": "integer"
                 },
                 "ip": {
@@ -542,16 +540,15 @@
                 "ua": {
                     "type": "string"
                 },
-                "updatedAt": {},
-                "user_uuid": {
+                "updatedAt": {
                     "type": "string"
                 },
-                "uuid": {
+                "user_id": {
                     "type": "string"
                 }
             }
         },
-        "my_modules.NewUserRow": {
+        "database.UsersModel": {
             "type": "object",
             "required": [
                 "description",
@@ -559,21 +556,22 @@
                 "name"
             ],
             "properties": {
-                "createdAt": {},
+                "_id": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
                 "email": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "name": {
                     "type": "string"
                 },
-                "updatedAt": {},
-                "uuid": {
+                "updatedAt": {
                     "type": "string"
                 }
             }
